--- a/app/src/main/res/layout/activity_client_sheet_view.xml
+++ b/app/src/main/res/layout/activity_client_sheet_view.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#C3C3C3">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp" />
+        android:background="@color/colorPrimary"
+        android:elevation="6dp"
+        android:titleTextColor="#FFFFFF"
+        app:title="Client List"
+        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:padding="8dp" />
+        android:padding="12dp"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        android:background="#E1E1E1" />
 
     <ProgressBar
         android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:indeterminateTint="@color/colorAccent" />
 
     <TextView
         android:id="@+id/tvEmptyState"
@@ -34,6 +43,10 @@
         android:layout_centerInParent="true"
         android:text="No clients found"
         android:textSize="16sp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/bg_empty_state"
+        android:padding="20dp"
+        android:elevation="2dp"
         android:visibility="gone" />
 
 </RelativeLayout>
